--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>{{ page.title }} : Abhishek Yadav's t-log</title>
+   <title>Abhishek Yadav's resume</title>
    <meta name="author" content="Abhishek Yadav" />
    
    <!-- Indigenous CSS -->
