style changes: added separate mobile style

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
    
    <!-- Indigenous CSS -->
    <link rel="stylesheet" href="/css/blog.css" type="text/css" />
+   <link rel="stylesheet" href="/css/blog-m.css" type="text/css" />
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
 
 </head>
