--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,33 +1,24 @@
----
-layout: default
----
-<div class="post">
-	<div class="post-header">
-		<h1><a href="{{ page.url }}">{{ page.title }}</a></h1>
-		<span class="date">{{ page.date | date: "%d %B %Y" }}</span>
-		<span class="location">{{ page.location }}</span>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
+<head>
+   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+   <title>{{ page.title }} : Abhishek Yadav </title>
+   <meta name="author" content="Abhishek Yadav" />
+</head>
+
+<body>
+	<div class="post">
+		<div class="post-header">
+			<!-- <h1><a href="{{ page.url }}">{{ page.title }}</a></h1> -->
+			<span class="location">{{ page.location }}</span>
+		</div>
+
+		<div class="post-body">	
+			{{ content }}
+		</div>	
+
+		<div class='post-footer'>
+			Published: <span class="date">{{ page.date | date: "%d %B %Y" }}</span>
+		</div>
 	</div>
-	<div class="post-body">	
-		{{ content }}
-	</div>	
-</div>
-<div class="comments">
-	<div id="disqus_thread"></div>
-	<script type="text/javascript">
-	    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-	    var disqus_shortname = 'zerothabhishek'; // required: replace example with your forum shortname
-
-	    // The following are highly recommended additional parameters. Remove the slashes in front to use.
-	    var disqus_identifier = '{{ page.title }}';
-	    //var disqus_url = 'http://example.com/permalink-to-page.html';
-
-	    /* * * DON'T EDIT BELOW THIS LINE * * */
-	    (function() {
-	        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-	        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-	        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-	    })();
-	</script>
-	<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-	<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
-</div>
+</body>
